--- a/.github/workflows/upload_episode.yml
+++ b/.github/workflows/upload_episode.yml
@@ -19,11 +19,8 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Install yt-dlp and dependencies
-        run: |
-          pip install --upgrade yt-dlp
-          sudo apt-get update
-          sudo apt-get install -y wget curl unzip chromium-browser
+      - name: Install yt-dlp
+        run: pip install yt-dlp
 
       # ✅ בדיקה אם הסוד YOUTUBE_COOKIES קיים
       - name: Debug GitHub Secret
@@ -33,8 +30,6 @@ jobs:
             exit 1
           else
             echo "✅ GitHub Secret YOUTUBE_COOKIES exists!"
-            echo "==== First 50 characters of YOUTUBE_COOKIES ===="
-            echo "${{ secrets.YOUTUBE_COOKIES }}" | cut -c 1-50
           fi
 
       # ✅ יצירת קובץ cookies.txt מתוך GitHub Secrets
@@ -43,56 +38,60 @@ jobs:
           echo "${{ secrets.YOUTUBE_COOKIES }}" | tr -d '\r' > cookies.txt
           echo "✅ Created cookies.txt successfully!"
 
-      # ✅ בדיקה אם הקובץ נוצר כהלכה + הצגת השורות הראשונות
-      - name: Debug cookies file
+      # ✅ בדיקה אם הקובץ נוצר ונראה תקין
+      - name: Verify cookies.txt format
         run: |
-          echo "===== Debugging cookies.txt ====="
-          if [ -f cookies.txt ]; then
-            echo "✅ cookies.txt exists!"
+          echo "===== Checking cookies.txt file ====="
+          if grep -q 'youtube.com' cookies.txt; then
+            echo "✅ cookies.txt contains YouTube cookies."
           else
-            echo "❌ cookies.txt is missing!"
+            echo "❌ cookies.txt does not contain valid YouTube cookies!"
             exit 1
           fi
-          echo "===== Showing first 20 lines of cookies.txt ====="
-          head -n 20 cookies.txt
-          echo "===== Showing special characters ====="
-          od -c cookies.txt
 
-      # ✅ הורדת הסרטון מ-YouTube בעזרת yt-dlp + שימוש ב-cookies.txt
+      # ✅ הורדת הסרטון מ-YouTube
       - name: Download YouTube Video (Full Video)
         run: |
+          echo "===== Starting video download ====="
           yt-dlp -f bestvideo+bestaudio --merge-output-format mp4 \
           --cookies cookies.txt \
-          -o "episode.mp4" "$(jq -r '.id' episode.json)"
+          -o "episode.mp4" "$(jq -r '.id' episode.json)" || { echo "❌ yt-dlp failed!"; exit 1; }
+          echo "✅ Video download completed!"
 
-      # ✅ בדיקה אם הקובץ video.mp4 נוצר בהצלחה
-      - name: Debug video file
+      # ✅ בדיקה אם הסרטון ירד בהצלחה
+      - name: Check if episode.mp4 exists
         run: |
           echo "===== Checking downloaded video file ====="
           if [ -f "episode.mp4" ]; then
             echo "✅ episode.mp4 exists!"
-            ls -lh episode.mp4
           else
             echo "❌ episode.mp4 is missing!"
             exit 1
           fi
 
-      # ✅ התקנת Puppeteer Chromium עבור Spotify
-      - name: Install Puppeteer Chromium
+      # ✅ הדפסת מידע על הסרטון
+      - name: Debug yt-dlp output
         run: |
-          npm install puppeteer
-          npx puppeteer browsers install chrome
+          echo "===== Debugging yt-dlp output ====="
+          yt-dlp --version
+          yt-dlp --help
+          echo "===== Checking available formats for video ====="
+          yt-dlp -F "$(jq -r '.id' episode.json)"
 
       # ✅ העלאת הווידאו ל-Spotify **תוך שימוש ב-cookies.txt**
       - name: Upload Video Episode to Spotify (Using Cookies)
-        uses: amram3133/youtube_to_spotify@main
+        uses: Schroedinger-Hat/youtube-to-spotify@v2.5.0
         env:
           SPOTIFY_EMAIL: ${{ secrets.SPOTIFY_EMAIL }}
           SPOTIFY_PASSWORD: ${{ secrets.SPOTIFY_PASSWORD }}
           EPISODE_PATH: /github/workspace
           YOUTUBE_COOKIES_PATH: "/github/workspace/cookies.txt"
 
-      - name: Debug final state
+      # ✅ הדפסת מידע נוסף אם יש שגיאות בהעלאה ל-Spotify
+      - name: Debug Cookies and Video Info
         run: |
-          echo "==== Debugging final files ===="
-          ls -lh /github/workspace
+          echo "==== Debugging cookies.txt before upload ===="
+          ls -lh /github/workspace/cookies.txt
+          cat /github/workspace/cookies.txt | head -n 20
+          echo "==== Checking if the video file exists ===="
+          ls -lh /github/workspace/episode.mp4"
